[package]
name = "exoware-sdk"
version.workspace = true
edition.workspace = true
publish = true
license.workspace = true
description = "Interact with the Exoware API in Rust."
readme = "README.md"
homepage.workspace = true
repository = "https://github.com/exowarexyz/monorepo/tree/main/sdk/rs"
documentation = "https://docs.rs/exoware-sdk"

[dependencies]
anyhow = { workspace = true }
bytes = { workspace = true }
base64 = { workspace = true }
buffa = { workspace = true }
buffa-types = { workspace = true }
connectrpc = { workspace = true }
futures = { workspace = true }
http = { workspace = true }
http-body = "1"
hyper = { workspace = true }
regex = { workspace = true }
reqwest = { workspace = true, features = ["json"] }
commonware-codec = { workspace = true }
serde = { workspace = true, features = ["derive"] }
thiserror = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tower = { workspace = true }
cookie_store = { version = "0.22.1", default-features = false }
psl = "2.1.212"

[build-dependencies]
connectrpc-build = "0.6.0"

[dev-dependencies]
hex = { workspace = true }
tokio = { workspace = true, features = ["test-util"] }
